test/fail/InferRecordTypes-1.agda
-- Sometimes we can't infer a record type

module InferRecordTypes-1 where

bad = record { }